fix hover css for social icons + fix link on mobile get started button

--- a/css/electrode.scss
+++ b/css/electrode.scss
@@ -84,11 +84,21 @@ h1 {
     margin-top: -4px;
     margin-right: 1em;
     height: 79px;
-      @media(max-width: 820px) {
-        margin-right: 0.5em;
-      }    
+    @media(max-width: 820px) {
+      margin-right: 0.5em;
+    }
+    &:hover {
+      a {
+        img {
+          transform: scale(1.2);
+        }
+      }
+    }
     a {
       padding: 34px 12px 18px 12px;
+      &:hover {
+        background-color: inherit;
+      }
       @media(max-width: 820px) {
         padding: 34px 8px 18px 8px;
       }
@@ -280,10 +290,10 @@ h1 {
         font-size: 0.9em;
       }
       @media(max-width: 820px) {
-        
+
       }
       @media(max-width: 700px) {
-        
+
       }
       &:hover {
         background-color: inherit;
@@ -1360,7 +1370,7 @@ img.footer-sub-logo {
 @media (max-width: 480px) {
 
 
- 
+
 
   div#mobile-slogan {
     font-size: 21px;
